2014-12-30  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/49263
	* gcc.target/sh/pr49263-1.c: New.
	* gcc.target/sh/pr49263-2.c: New.

2014-12-30  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/53987
	* gcc.target/sh/pr53987-1.c: New.

2014-12-30  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.dg/ipa/inline-7.c: New testcase.

2014-12-29  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/60357
	* gfortran.dg/alloc_comp_constructor_7.f90: New.

2014-12-29  Hans-Peter Nilsson  <hp@axis.com>

	* gcc.dg/lto/pr59626_0.c (ASMNAME, ASMNAME2, STRING): Define.
	(__atoi): Use ASMNAME.

2014-12-28  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/pr57003.c: Skip on x32.
	* gcc.target/i386/pr59927.c: Likewise.
	* gcc.target/i386/pr60516.c: Likewise.

2014-12-28  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/56867
	* gfortran.dg/dependency_45.f90:  New test.

2014-12-27  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/54756
	* gfortran.dg/class_array_3.f03: Fixed invalid test case.
	* gfortran.dg/class_array_7.f03: Ditto.
	* gfortran.dg/class_dummy_4.f03: Ditto.
	* gfortran.dg/defined_assignment_3.f90: Ditto.
	* gfortran.dg/defined_assignment_5.f90: Ditto.
	* gfortran.dg/elemental_subroutine_10.f90: Ditto.
	* gfortran.dg/typebound_operator_4.f03: Ditto.
	* gfortran.dg/typebound_proc_16.f03: Ditto.
	* gfortran.dg/unlimited_polymorphic_19.f90: Ditto.
	* gfortran.dg/class_dummy_5.f90: New test.

2014-12-27  Segher Boessenkool  <segher@kernel.crashing.org>

	* lib/ubsan-dg.exp (check_effective_target_fsanitize_undefined):
	Check if testcases run without errors, not just if they compile.

2014-12-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/64409
	* gcc.target/i386/pr64409.c: New test.

2014-12-24  Segher Boessenkool  <segher@kernel.crashing.org>

	* gcc.target/powerpc/405-dlmzb-strlen-1.c: Explicitly align arg.
	* gcc.target/powerpc/440-dlmzb-strlen-1.c: Ditto.

2014-12-24  Andrew Stubbs  <ams@codesourcery.com>

	PR testsuite/64032